# himawari-pi

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cross-build
src/: app.rs  himawari.rs  main.rs
src/app/: downloaded_image.rs  downloading_image.rs  modal.rs
src/himawari/: download.rs  fetch.rs
