[package]
name = "himawari-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
headless_chrome = { version = "1.0.5", features = ["fetch", "rustls"] }
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["rustls-tls", "blocking"] }
