[package]
name = "himawari-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = "0.4.30"
env_logger = "0.10.0"
futures = "0.3.28"
iced = { version = "0.10.0", features = ["image", "tokio", "advanced"] }
image = "0.24.7"
log = "0.4.20"
rayon = "1.8.0"
reqwest = { version = "0.11.20", features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
